fix hard miss color to be more readable

--- a/public/css/ohhell.css
+++ b/public/css/ohhell.css
@@ -128,7 +128,7 @@ input[type=number]{
   background-color:  lightcoral;
 }
 .game-summary-hardmiss {
-  background-color: darkred;
+  background-color: red;
 }
 
 .resume-game, .resume-game:hover {
